--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,8 @@ main {
   padding: 20px;
 }
 h1, h2 {
-  font-size: 24px;
-  line-height: 24px;
+  font-size: 1.5em;
+  line-height: 1.25em;
   padding-bottom: 10px;
 }
 .cards {
@@ -41,8 +41,9 @@ h1, h2 {
   margin-bottom: 10px;
   overflow-y: auto;
   overflow-wrap: break-word;
+  overflow-x: wrap;
 }
-.card--1 {
+.card--first {
   order: -1
 }
 img {
@@ -50,10 +51,13 @@ img {
   padding-right: 20px;
 }
 ul {
+  display: flex;
   list-style-type: none;
   font-weight: bold;
 }
+li {
+  padding-right: 5px;
+}
 .card > div {
   display: flex;
-  align-content: space-between;
 }
